fixed letters alignment

--- a/src/Styles/about.css
+++ b/src/Styles/about.css
@@ -110,14 +110,12 @@ img {
   color: var(--dark-red);
 }
 
-
 /* MEDIA QUERIES: TABLET */
 
 
 @media only screen and (max-width: 1135px) {
   
   .content {
-    background: lightgray;
     width: calc(100vw - 120px);
     height: calc(100vh - 120px);
   }
@@ -128,7 +126,7 @@ img {
   
   .about {
     width: 100%;
-    height: 375px;
+    height: 250px;
     display: flex;     
     flex-direction: column;
   }
@@ -139,29 +137,37 @@ img {
     padding-right: 15px;  
   }
 
-  .letters-about {
-    display: flex;
-    justify-content: center;
-    padding-right: 15px;  
+  .about-me {
+    width: 100%;
+    height: calc(100% - 250px);
+    margin: 0;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
   }
 
-  .lastname {
+  .self-introduction{
+    height: calc(100% - 80px);
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    text-align: center;
+    align-items: center;
+    margin: 0;
+    font-size: 30px;
+    color: var(--dark-gray);
+    font-weight: 100;
+  }
+
+  .self-introduction p hr {
+
+  }
+  
+  img {
     display: none;
   }
 
-  .welcome-message {
-    background: white;
-    width: 100%;
-    height: calc(100% - 375px);
-    margin: 0;
-    justify-content: space-evenly;
-    align-items: center;
-    text-align: center;
-  }
-
-  .welcome-message p {
-    width: 70%;
-  }
 
   hr {
     display: inline-block;
@@ -169,14 +175,18 @@ img {
     height: 1px;
     background-color: var(--dark-gray)
   }
-  
-  .firstname span:nth-child(1) {
+
+  .two-lines-first span:nth-child(1) {
     padding-right: 9px;
   }
 
-  .firstname span:nth-child(2) {
+  .two-lines-second span:nth-child(1) {
+    padding-right: 9px;
+  }
+
+  .two-lines-first span:nth-child(3) {
     position: relative;
-    bottom: 7px;
+    bottom: 8px;  
   }
 
 }
@@ -193,12 +203,12 @@ img {
     height: calc(100vh - 60px);
   }
   
-  .letters-about {
+  /* .letters-about {
     width: 100%;
     height: 261px;
     display: flex;     
     flex-direction: column;
-  }
+  } */
 
   .firstname, .lastname-abridged1, .lastname-abridged2 {
     display: flex;
